--- a/efs/Makefile
+++ b/efs/Makefile
@@ -1,3 +1,3 @@
 deploy:
-	aws cloudformation create-stack --stack-name test-alb-asg --template-body file://./template.yml --parameters file://./params.json
+	aws cloudformation create-stack --stack-name test-efs --template-body file://./template.yml --parameters file://./params.json
 
